Fix the info icon alignment

--- a/client/components/domains/register-domain-step/style.scss
+++ b/client/components/domains/register-domain-step/style.scss
@@ -140,6 +140,7 @@ body.is-section-signup.is-white-signup {
 		padding: 0;
 		margin-bottom: 24px;
 	}
+	.domain-search-results__domain-availability svg,
 	.register-domain-step__notice svg {
 		margin: 0;
 		padding: 0;
